@@ -3,7 +3,6 @@ from dearpygui.simple import *
 from dearpygui.demo import *
 from math import sin, cos
 import random
-import time
 
 set_log_level(0)
 #enable_docking(shift_only=False, dock_space=True)
@@ -13,12 +12,11 @@ set_main_window_size(1000, 800)
 set_main_window_pos(0, 0)
 add_additional_font("../../Resources/NotoSerifCJKjp-Medium.otf", 20)
 
-# char remaps
-#add_character_remap(0x0041, 0x00A2)
-#add_character_remap(0x0061, 0x00AB)
-
 show_demo()
 show_logger()
-show_metrics()
 
-start_dearpygui()
+setup_dearpygui()
+while(is_dearpygui_running()):
+    demo_main_callback()
+    render_dearpygui_frame()   
+cleanup_dearpygui()
